cmake_minimum_required(VERSION 2.8.3)
FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
set (CMAKE_CXX_STANDARD 11)
set(Boost_NO_BOOST_CMAKE ON) 
if (${PYTHON_VERSION_MAJOR} EQUAL 3)
    FIND_PACKAGE(Boost COMPONENTS python3)
else()
    FIND_PACKAGE(Boost COMPONENTS python)
endif()
ADD_DEFINITIONS(-std=c++11)
set(INCLUDE_DIR "./include")
include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIR}
${PYTHON_NUMPY_INCLUDE_DIRS} ${INCLUDE_DIR})
message(STATUS "${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIR}
${PYTHON_NUMPY_INCLUDE_DIRS} ${INCLUDE_DIR}")
LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES}) # Deprecated but so convenient!

ADD_SUBDIRECTORY(src)
